--- a/Мillileo/index.html
+++ b/Мillileo/index.html
@@ -4,36 +4,32 @@
 	<title>Мillileo-продажа товаров в с.Старая Царичанка</title>
 </head>
 <body>
-	<h1>Мillileo</h1>
-	<p>размещайте свой ненужый товар прямо здесь</p>
-	<hr>
-	<h2>Привет !</h2>
-<div style="height:50px; width:560px; border-left:2px solid green; background-color:pink; padding-left:10px">Вы на странице публикации товара. Чтобы повесить свой товар перейдите по адресу ниже.
-Ваш товар будет зарегестрирован на следующий день.
+<h1>Мillileo</h1>
+<p>размещайте свой ненужый товар прямо здесь</p>
+<hr>
+<h2>Привет !</h2>
+<div style="height:50px; width:560px; border-left:2px solid green; background-color:pink; padding-left:10px">
+	Вы на странице публикации товара
+	<br>
+	Чтобы повесить свой товар перейдите по адресу ниже. 
+	<br>
+	Ваш товар будет зарегестрирован на следующий день.
 </div>
 <style>
    .btn {
-    display: inline-block; /* Строчно-блочный элемент */
-    background: #8C959D; /* Серый цвет фона */
-    color: #fff; /* Белый цвет текста */
-    padding: 1rem 1.5rem; /* Поля вокруг текста */
-    text-decoration: none; /* Убираем подчёркивание */
-    border-radius: 3px; /* Скругляем уголки */
+    display: inline-block;
+    background: #8C959D; 
+    color: #fff; 
+    padding: 1rem 1.5rem;
+    text-decoration: none;
+    border-radius: 3px; 
    }
-  </style>
- </head>
- <body> 
-  <a href="https://t.me/DaJWeb" class="btn">Переход по ссылке</a>
-  <div style="height:30px; width:170px; border-left:2px solid green; background-color:pink; padding-left:10px">Напишите все админу ^
+</style> 
+<a href="https://t.me/ASAMBLET" class="btn">Переход по ссылке</a>
+<div style="height:30px; width:170px; border-left:2px solid green; background-color:pink; padding-left:10px">Напишите все админу ^
 </div>
 <hr>
 <h1>САЙТ СКОРО БУДЕТ НАСТРОЕН В ИДЕАЛЬНЫЙ ВИД</h1>
 <h2>!!! ХОРОШЕГО ДНЯ !!! </h2>
- </body>
-</html>
-
-  
-
-
 </body>
 </html>
