--- a/Мillileo/index.html
+++ b/Мillileo/index.html
@@ -13,7 +13,8 @@
 	<br>
 	Чтобы повесить свой товар перейдите по адресу ниже. 
 	<br>
-	Ваш товар будет зарегестрирован на следующий день.
+	Ваш товар будет оаубликован на следующий день.
+	<br>
 </div>
 <style>
    .btn {
@@ -26,6 +27,7 @@
    }
 </style> 
 <a href="https://t.me/ASAMBLET" class="btn">Переход по ссылке</a>
+	<br>
 <div style="height:30px; width:170px; border-left:2px solid green; background-color:pink; padding-left:10px">Напишите все админу ^
 </div>
 <hr>
