--- a/Мillileo/index.html
+++ b/Мillileo/index.html
@@ -10,11 +10,10 @@
 <h2>Привет !</h2>
 <div style="height:50px; width:560px; border-left:2px solid green; background-color:pink; padding-left:10px">
 	Вы на странице публикации товара
-	<br>
+	
 	Чтобы повесить свой товар перейдите по адресу ниже. 
-	<br>
-	Ваш товар будет оаубликован на следующий день.
-	<br>
+	
+	Ваш товар будет опубликован на следующий день.
 </div>
 <style>
    .btn {
@@ -27,7 +26,7 @@
    }
 </style> 
 <a href="https://t.me/ASAMBLET" class="btn">Переход по ссылке</a>
-	<br>
+
 <div style="height:30px; width:170px; border-left:2px solid green; background-color:pink; padding-left:10px">Напишите все админу ^
 </div>
 <hr>
