--- a/Мillileo/index.html
+++ b/Мillileo/index.html
@@ -5,29 +5,32 @@
 </head>
 <body>
 <h1>Мillileo</h1>
-<p>размещайте свой ненужый товар прямо здесь</p>
+<p>Pазмещайте свой ненужый товар прямо здесь</p>
 <hr>
 <h2>Привет !</h2>
-<div style="height:50px; width:560px; border-left:2px solid green; background-color:pink; padding-left:10px">
+<div style="height:60px; width:560px; border-left:2px solid green; background-color: rgb(102, 87, 172); padding-left:10px">
 	Вы на странице публикации товара
-	
+<br>
 	Чтобы повесить свой товар перейдите по адресу ниже. 
-	
-	Ваш товар будет опубликован на следующий день.
+<br>
+	Ваш товар будет оаубликован на следующий день.
+
 </div>
 <style>
    .btn {
     display: inline-block;
     background: #8C959D; 
-    color: #fff; 
-    padding: 1rem 1.5rem;
+    color: rgb(183, 214, 47); 
+    padding: 1rem 4rem;
     text-decoration: none;
     border-radius: 3px; 
    }
-</style> 
+</style>
+<br> 
 <a href="https://t.me/ASAMBLET" class="btn">Переход по ссылке</a>
-
-<div style="height:30px; width:170px; border-left:2px solid green; background-color:pink; padding-left:10px">Напишите все админу ^
+<br>
+<br>
+<div style="height:20px; width:170px; border-left:2px solid green; background-color:rgb(102, 87, 172); padding-left: 10px">Напишите все админу ^
 </div>
 <hr>
 <h1>САЙТ СКОРО БУДЕТ НАСТРОЕН В ИДЕАЛЬНЫЙ ВИД</h1>
